--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,3 +28,4 @@ jobs:
         username: ${{ secrets.FTP_USER }}
         password: ${{ secrets.FTP_PASS }}
         local-dir: out/
+        dangerous-clean-slate: true
