--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/styled-components": "^5.1.26",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.5",
+    "next-purgecss": "^4.0.0",
     "react-dom": "18.2.0",
     "sass": "^1.54.4",
     "styled-components": "^5.3.5",
